--- a/CSS/uvas.CSS
+++ b/CSS/uvas.CSS
@@ -193,16 +193,19 @@ form input, form textarea {
 
 form button {
     padding: 12px;
-    background: rgba(0, 0, 255, 0.2);
+    background: rgba(255, 255, 255, 0.267);
     border: none;
-    color: rgba(238, 0, 206, 0.466);
+    color: #ff9ff2d2;
     font-weight: bold;
     cursor: pointer;
     border-radius: 5px;
 }
 
 form button:hover {
-    background: rgba(0, 0, 255, 0.2);
+    background: rgba(220, 220, 233, 0.2);
+    transform: scale(1.1);
+    filter: none;
+    transition: all 0.3 ease-in-out;
 }
 
 /* Footer */
